随便说点啥

--- a/index.html
+++ b/index.html
@@ -4,28 +4,110 @@
 		<meta charset="utf-8" />
 		<title>
 		</title>
-		<link rel="stylesheet" type="text/css" href="3 1 1 Offer-ECE-Zhang Shujia_files/style.css" />
+		<link rel="stylesheet" type="text/css" href="CV_Shujia_Zhang_files/style.css" />
 	</head>
 	<body>
 		<div class="stl_02">
 			<div class="stl_03">
-				<object data="3 1 1 Offer-ECE-Zhang Shujia_files/img_02.svg" type="image/svg+xml" class="stl_04" style="position:absolute; width:49.5833em; height:70.1667em;">
-					<embed src="3 1 1 Offer-ECE-Zhang Shujia_files/img_02.svg" type="image/svg+xml" />
+				<object data="CV_Shujia_Zhang_files/img_01.svg" type="image/svg+xml" class="stl_04" style="position:absolute; width:49.5833em; height:70.1667em;">
+					<embed src="CV_Shujia_Zhang_files/img_01.svg" type="image/svg+xml" />
 				</object>
+			</div>
+			<div class="stl_view">
+				<div class="stl_05 stl_06">
+					<div class="stl_01" style="left:20.92em;top: 4.2031em; z-index:11; "><span class="stl_07 stl_08 stl_09" style="word-spacing:0.0076em;">Shujia ZHANG &nbsp;</span></div>
+					<div class="stl_01" style="left:14.3em;top: 6.6462em; "><span class="stl_10 stl_08 stl_11" style="word-spacing:0.7399em;">(+86)166-2280-6219 zhang_shujia2000@163.com &nbsp;</span></div>
+					<div class="stl_01" style="left:4.27em;top: 8.8031em; z-index:62; "><span class="stl_07 stl_08 stl_12">EDUCATION &nbsp;</span></div>
+					<div class="stl_01" style="left:4.25em;top: 11.0044em; z-index:124; "><span class="stl_13 stl_08 stl_14" style="word-spacing:-0.015em;">School of Electrical and Information Engineering, Tianjin University &nbsp;</span></div>
+					<div class="stl_01" style="left:37.49em;top: 11.0044em; z-index:142; "><span class="stl_15 stl_08 stl_16" style="word-spacing:-0.001em;">Sept. 2018 - Jun. 2022 &nbsp;</span></div>
+					<div class="stl_01" style="left:4.25em;top: 12.8745em; "><span class="stl_15 stl_08 stl_16" style="word-spacing:-0.0152em;">Bachelor of Engineering, Major in Automation &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 14.6445em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:6em;top: 14.6345em; z-index:185; "><span class="stl_13 stl_08 stl_19">GPA</span><span class="stl_15 stl_08 stl_20" style="word-spacing:-0.0031em;">: 3.83/4.0 (top 10 among 167, top 1 in my class) &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 16.3745em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:6em;top: 16.3745em; z-index:317; "><span class="stl_13 stl_08 stl_21" style="word-spacing:0.3454em;">Major Courses</span><span class="stl_15 stl_08 stl_22" style="word-spacing:0.3477em;">: Power electronics technology (98/100), Introduction to Artificial Intelligence (98/100), &nbsp;</span></div>
+					<div class="stl_01" style="left:5.42em;top: 17.4544em; "><span class="stl_15 stl_08 stl_23" style="word-spacing:0.0036em;">Detection technology basis (96/100), Advanced mathematics:</span><span class="stl_15 stl_08 stl_18" style="word-spacing:0.2529em;">&nbsp;</span><span class="stl_15 stl_08 stl_24" style="word-spacing:-0.017em;">(95/100), Numerical calculation methods (96.8/100) &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 19.2145em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:3.67em;top: 20.9745em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:6em;top: 19.2145em; "><span class="stl_13 stl_08 stl_14">English</span><span class="stl_15 stl_08 stl_25" style="word-spacing:-0.0074em;">: 581 (CET4, one-pass), 570 (CET6, one-pass), 7.0 (IELTS) &nbsp;</span></div>
+					<div class="stl_01" style="left:6em;top: 20.9645em; z-index:480; "><span class="stl_13 stl_08 stl_26">Awards</span><span class="stl_15 stl_08 stl_27" style="word-spacing:0.085em;">: Merit Student Honor (2019 and 2020, top 10%), Third Prize in the National Mathematics contest for &nbsp;</span></div>
+					<div class="stl_01" style="left:5.42em;top: 22.0445em; "><span class="stl_15 stl_08 stl_24" style="word-spacing:0.0025em;">college students(2020) &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 23.8044em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:6em;top: 23.8044em; z-index:676; "><span class="stl_13 stl_08 stl_14" style="word-spacing:0.073em;">Programming Skills</span><span class="stl_15 stl_08 stl_28" style="word-spacing:0.0677em;">: solid expertise in C++, Python, MATLAB, assembly language, TensorFlow; experienced &nbsp;</span></div>
+					<div class="stl_01" style="left:5.42em;top: 24.8845em; "><span class="stl_15 stl_08 stl_16" style="word-spacing:0.0631em;">in SQL,HTML; proficient in using AutoCAD, Altium Designer, Quartus, Multisim, SPSS and other professional &nbsp;</span></div>
+					<div class="stl_01" style="left:5.42em;top: 25.9745em; z-index:776; "><span class="stl_15 stl_08 stl_29">software &nbsp;</span></div>
+					<div class="stl_01" style="left:4.27em;top: 28.0931em; z-index:795; "><span class="stl_07 stl_08 stl_30" style="word-spacing:-0.0146em;">RESEARCH EXPERIENCES &nbsp;</span></div>
+					<div class="stl_01" style="left:4.25em;top: 29.4145em; "><span class="stl_13 stl_08 stl_31" style="word-spacing:-0.0101em;">Research on Image Recognition of Grid Based on Deep Learning and UAV | RA &nbsp;</span></div>
+					<div class="stl_01" style="left:36.8em;top: 29.4145em; z-index:873; "><span class="stl_15 stl_08 stl_32" style="word-spacing:0.0222em;">May. 2020 – May.2021 &nbsp;</span></div>
+					<div class="stl_01" style="left:4.45em;top: 31.1745em; z-index:949; "><span class="stl_15 stl_08 stl_24" style="word-spacing:-0.0026em;">Advisor: Xi Chen, School of Electrical and Information Engineering</span><span class="stl_13 stl_08 stl_18" style="word-spacing:0.0054em;">, </span><span class="stl_15 stl_08 stl_18">Tianji</span><span class="stl_15 stl_08 stl_33">n</span><span class="stl_15 stl_08 stl_34">U</span><span class="stl_15 stl_08 stl_35">niversity &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 32.9344em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:6em;top: 32.9344em; z-index:1044; "><span class="stl_15 stl_08 stl_14" style="word-spacing:-0.0008em;">Construction of grid network fault data set in Inner Mongolia pastoral area: data enhancement (from 211 sheets &nbsp;</span></div>
+					<div class="stl_01" style="left:5.42em;top: 34.0245em; "><span class="stl_15 stl_08 stl_25" style="word-spacing:-0.0032em;">to 1000 sheets), data cleaning, etc. Applied and compared different techniques of data augmentation, such as &nbsp;</span></div>
+					<div class="stl_01" style="left:5.42em;top: 35.1044em; "><span class="stl_15 stl_08 stl_36" style="word-spacing:0.0013em;">flipping, to expand the dataset &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 36.9445em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:3.67em;top: 39.7745em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:6em;top: 36.9344em; "><span class="stl_15 stl_08 stl_37" style="word-spacing:0.0016em;">Contributed to developing a model based on FASTER-RCNN algorithm , and demonstrating a high accuracy of &nbsp;</span></div>
+					<div class="stl_01" style="left:5.42em;top: 38.0245em; z-index:1259; "><span class="stl_15 stl_08 stl_11">98.21% &nbsp;</span></div>
+					<div class="stl_01" style="left:6em;top: 39.7745em; "><span class="stl_15 stl_08 stl_37" style="word-spacing:0.0012em;">Deploy the model to Huawei Cloud server to realize online real-time calculation. &nbsp;</span></div>
+					<div class="stl_01" style="left:4.25em;top: 41.5344em; "><span class="stl_13 stl_08 stl_38" style="word-spacing:-0.0035em;">Research on Garbage Classification Based on Deep Learning | RA &nbsp;</span></div>
+					<div class="stl_01" style="left:4.25em;top: 43.2844em; z-index:1473; "><span class="stl_15 stl_08 stl_22" style="word-spacing:0.0028em;">Advisor: Ming Zeng, Institute of Robotics and Automation Systems, Tianjin University &nbsp;</span></div>
+					<div class="stl_01" style="left:37.15em;top: 41.5344em; z-index:1399; "><span class="stl_15 stl_08 stl_39" style="word-spacing:-0.0026em;">Mar. 2019 - Mar. 2020 &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 45.0344em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:3.67em;top: 46.7844em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:3.67em;top: 48.5445em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:6em;top: 45.0344em; z-index:1558; "><span class="stl_15 stl_08 stl_37" style="word-spacing:0.0001em;">Contributed to finding and reading over 100 articles related to computer vision and deep learning. &nbsp;</span></div>
+					<div class="stl_01" style="left:6em;top: 46.7844em; "><span class="stl_15 stl_08 stl_16" style="word-spacing:0.0012em;">Contributed to constructing a public garbage dataset including 10 subclasses and a total of 10,624 images. &nbsp;</span></div>
+					<div class="stl_01" style="left:6em;top: 48.5344em; "><span class="stl_15 stl_08 stl_20" style="word-spacing:0.0022em;">Contributed to writing an article, which applied four methods of deep learning to classify garbage and &nbsp;</span></div>
+					<div class="stl_01" style="left:5.42em;top: 49.6245em; "><span class="stl_15 stl_08 stl_36" style="word-spacing:0.0222em;">demonstrated a high accuracy of 94%. &nbsp;</span></div>
+					<div class="stl_01" style="left:4.27em;top: 51.7331em; z-index:1785; "><span class="stl_07 stl_08 stl_40" style="word-spacing:-0.0207em;">SELECTED PROJECTS &nbsp;</span></div>
+					<div class="stl_01" style="left:4.25em;top: 53.0544em; z-index:1836; "><span class="stl_13 stl_08 stl_41" style="word-spacing:0.0131em;">Handwritten Digit Recognition Using Machine Learning | TA &nbsp;</span></div>
+					<div class="stl_01" style="left:37.67em;top: 53.0544em; "><span class="stl_15 stl_08 stl_42" style="word-spacing:-0.0083em;">Feb. 2020 - Jun. 2020 &nbsp;</span></div>
+					<div class="stl_01" style="left:4.25em;top: 54.5645em; z-index:1929; "><span class="stl_15 stl_08 stl_43" style="word-spacing:-0.0112em;">Advisor: Xi Chen, School of Electrical and Information Engineering, Tianjin University &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 56.0745em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:6em;top: 56.0745em; "><span class="stl_15 stl_08 stl_31" style="word-spacing:0.0002em;">Recognized the handwritten digit based on the BP Neural Network with MATLAB. &nbsp;</span></div>
+					<div class="stl_01" style="left:6em;top: 57.9044em; "><span class="stl_15 stl_08 stl_25" style="word-spacing:-0.0103em;">Recognized the handwritten digit based on Convolutional Neural Network using Python. &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 57.9044em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:3.67em;top: 59.6645em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:6em;top: 59.6645em; "><span class="stl_15 stl_08 stl_20" style="word-spacing:0.0016em;">Scored 98/100 in the course work of Introduction to Artificial Intelligence, ranking the 1</span><sup style="top: -0.29em;"><span class="stl_44 stl_08 stl_45" style="word-spacing:-0.0082em;">st </span></sup><span class="stl_15 stl_08 stl_24" style="word-spacing:-0.0482em;">among 82 students. &nbsp;</span></div>
+					<div class="stl_01" style="left:4.25em;top: 61.4145em; "><span class="stl_13 stl_08 stl_16" style="word-spacing:0.0416em;">Interdisciplinary Contest In Modeling</span><span class="stl_13 stl_08 stl_18" style="word-spacing:26.4523em;">&nbsp;</span><span class="stl_15 stl_08 stl_36" style="word-spacing:0.0485em;">Feb. 2021 &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 63.1645em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:6em;top: 63.1544em; z-index:2299; "><span class="stl_15 stl_08 stl_22" style="word-spacing:0.0027em;">Built a fuzzy comprehensive evaluation model to evaluate the health of higher education health systems in &nbsp;</span></div>
+					<div class="stl_01" style="left:5.42em;top: 64.2445em; "><span class="stl_15 stl_08 stl_37" style="word-spacing:0.0006em;">various countries. &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 65.9945em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:6em;top: 65.9945em; "><span class="stl_15 stl_08 stl_14" style="word-spacing:-0.001em;">Evaluated the health level based on the data of higher education in various countries, by layering the indicators, &nbsp;</span></div>
+					<div class="stl_01" style="left:5.42em;top: 67.0745em; "><span class="stl_15 stl_08 stl_24" style="word-spacing:-0.0029em;">using the entropy method, and establishing the membership function. &nbsp;</span></div>
+				</div>
 			</div>
 		</div>
 		<div class="stl_02">
 			<div class="stl_03">
-				<object data="3 1 1 Offer-ECE-Zhang Shujia_files/img_04.svg" type="image/svg+xml" class="stl_04" style="position:absolute; width:49.5833em; height:70.1667em;">
-					<embed src="3 1 1 Offer-ECE-Zhang Shujia_files/img_04.svg" type="image/svg+xml" />
+				<object data="CV_Shujia_Zhang_files/img_02.svg" type="image/svg+xml" class="stl_04" style="position:absolute; width:49.5833em; height:70.1667em;">
+					<embed src="CV_Shujia_Zhang_files/img_02.svg" type="image/svg+xml" />
 				</object>
 			</div>
-		</div>
-		<div class="stl_02">
-			<div class="stl_03">
-				<object data="3 1 1 Offer-ECE-Zhang Shujia_files/img_06.svg" type="image/svg+xml" class="stl_04" style="position:absolute; width:49.5833em; height:70.1667em;">
-					<embed src="3 1 1 Offer-ECE-Zhang Shujia_files/img_06.svg" type="image/svg+xml" />
-				</object>
+			<div class="stl_view">
+				<div class="stl_05 stl_06">
+					<div class="stl_01" style="left:4.25em;top: 4.8568em; z-index:33; "><span class="stl_46 stl_08 stl_47" style="word-spacing:-0.0755em;">LEADERSHIP EXPERIENCE AND ACTIVITIES &nbsp;</span></div>
+					<div class="stl_01" style="left:4.25em;top: 6.9245em; z-index:88; "><span class="stl_13 stl_08 stl_48" style="word-spacing:0.0103em;">Youth Volunteers Association of Tianjin University |Minister &nbsp;</span></div>
+					<div class="stl_01" style="left:37.67em;top: 6.9245em; "><span class="stl_15 stl_08 stl_49" style="word-spacing:-0.0252em;">Apr. 2019 – Apr.2020 &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 8.6745em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:6em;top: 8.6745em; z-index:171; "><span class="stl_15 stl_08 stl_50" style="word-spacing:0.0048em;">Organized charity sales activities by selling roses in Tianjin University. &nbsp;</span></div>
+					<div class="stl_01" style="left:6em;top: 10.5145em; "><span class="stl_15 stl_08 stl_16" style="word-spacing:0.0016em;">Organized blood donation activities into campus. &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 10.5245em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:3.67em;top: 12.2845em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:6em;top: 12.2745em; "><span class="stl_15 stl_08 stl_24" style="word-spacing:-0.0011em;">Went to Henan Province for a two-week teaching volunteer activity. &nbsp;</span></div>
+					<div class="stl_01" style="left:4.25em;top: 14.0245em; "><span class="stl_13 stl_08 stl_14" style="word-spacing:-0.0088em;">Peiyang Chorus | Minister of Voice &nbsp;</span></div>
+					<div class="stl_01" style="left:37.22em;top: 14.0245em; "><span class="stl_15 stl_08 stl_51" style="word-spacing:-0.0268em;">Sept. 2017 – Dec. 2017 &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 15.7745em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:6em;top: 15.7745em; "><span class="stl_15 stl_08 stl_22" style="word-spacing:0.0021em;">Performed in Tianjin Concert Hall to celebrate the 70th anniversary of</span><span class="stl_15 stl_08 stl_18" style="word-spacing:0.2538em;">&nbsp;</span><span class="stl_15 stl_08 stl_24">China. &nbsp;</span></div>
+					<div class="stl_01" style="left:6em;top: 17.5245em; "><span class="stl_15 stl_08 stl_52" style="word-spacing:-0.0028em;">Managed and appraised the members of</span><span class="stl_15 stl_08 stl_18" style="word-spacing:0.2412em;">&nbsp;</span><span class="stl_15 stl_08 stl_25" style="word-spacing:0.0035em;">Peiyang Chorus. &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 17.5245em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:4.25em;top: 19.5768em; z-index:451; "><span class="stl_46 stl_08 stl_40" style="word-spacing:-0.042em;">SKILLS AND INTERESTS &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 21.6445em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:6em;top: 21.6445em; "><span class="stl_13 stl_08 stl_24" style="word-spacing:0.0004em;">Language Skills: </span><span class="stl_15 stl_08 stl_20" style="word-spacing:-0.0027em;">Chinese (native), English &nbsp;</span></div>
+					<div class="stl_01" style="left:3.67em;top: 23.3945em; "><span class="stl_17 stl_08 stl_18"></span></div>
+					<div class="stl_01" style="left:6em;top: 23.3945em; z-index:582; "><span class="stl_13 stl_08 stl_51" style="word-spacing:-0.0019em;">Hobbies: S</span><span class="stl_15 stl_08 stl_20" style="word-spacing:0.0017em;">inging(a member of Peiyang Choirs, which won the Gold Award in the International Choral Festiva &nbsp;</span></div>
+					<div class="stl_01" style="left:5.42em;top: 24.4044em; "><span class="stl_15 stl_08 stl_20" style="word-spacing:0.003em;">for several times.), Guitar, Reading, Photography &nbsp;</span></div>
+				</div>
 			</div>
 		</div>
 	</body>
